# BBLapps

./: .gitattributes  .gitignore  CLAUDE.md  pyproject.toml
BBL/: __init__.py  center_laser_in_gun.py  demo_ioc.py  fitting.py  get_frame.py  live_plot.py  measure_trend.py  physics.py  pv_tools.py  solenoid_scan.py  today.py
BBL/colormaps/: cosmic.txt  inferno.txt  ocean.txt  plasma.txt  rainforest.txt  redshift.txt  seaweed.txt  yellow_blue.txt  yellow_purple.txt
EMPAD/: debug.out  def.gl  error_epics.txt  join_beamview_ioc  join_python_ioc  make_ramdisk  remove_ramdisk  restart_beamview_ioc  restart_python_ioc  stop_beamview_ioc  stop_python_ioc  tvx_cmd.sh  tvxrc
EMPAD/scripts/: empad_ioc.py  python_epics_ioc.py  python_ioc.py  report_status.py  run_python_epics_ioc.sh  run_python_ioc.sh  startupbetter.cmd  test.py
beamview/: config_loader.py  main.py  main_window.py  snapshot_window.py  test_ad_backend.py
beamview/cameras/: base.py  epics_areadetector.py  gige.py  mock.py  vpcam.py
beamview/configs/: 211.yaml  b24.yaml  b29.yaml  empad.yaml  home.yaml  xlight.yaml
camera_ioc/: README.md  ad_ioc_base.py  gateway_ioc.py  gige_ioc.py  mock_ioc.py  test_ad_contract.py  test_relay_chain.py  vpcam_extensions.py
utilities/: __init__.py  get_colormap.py  today.py
utilities/colormaps/: blues.txt  bubblegum.txt  chill.txt  chroma.txt  emergency.txt  flamingo.txt  freeze.txt  gem.txt  guppy.txt  horizon.txt  ivan.txt  jungle.txt  magma.txt  neon.txt  orange_white_purple.txt  prinsenvlag.txt  purple_haze.txt  red_blue.txt  (+5 more)
vpcam/: .gitignore  LICENSE  README.md
(+32 files in other folders)
